# oh-my-warp

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-AGPL  PRD.md  README.md  RELEASE_NOTES_v0.0.1.md  RELEASE_NOTES_v0.0.10.md  RELEASE_NOTES_v0.0.2.md  RELEASE_NOTES_v0.0.3.md  RELEASE_NOTES_v0.0.4.md  RELEASE_NOTES_v0.0.5.md  RELEASE_NOTES_v0.0.6.md  RELEASE_NOTES_v0.0.7.md  RELEASE_NOTES_v0.0.8.md  RELEASE_NOTES_v0.0.9.md  TODO.md  package-lock.json  package.json
.claude/: settings.json
.claude/hooks/: guard-bash.sh  guard-release-build.sh  guard-vendor-and-brand.sh  spec-touch-reminder.sh  todo-reminder.sh
.claude/skills/byorc-protocol-check/: SKILL.md
.claude/skills/check-scope/: SKILL.md
.claude/skills/refresh-cassette/: SKILL.md
.claude/skills/release-build-audit/: SKILL.md
.claude/skills/release-checklist/: SKILL.md
.claude/skills/spec-consistency/: SKILL.md
.claude/skills/tech-debt-audit/: SKILL.md
.claude/skills/trd/: SKILL.md
.claude/skills/triage-rebase/: SKILL.md
.github/workflows/: ci.yml  release.yml  upstream-rebase.yml
.github/workflows/scripts/: grep-secrets.sh
apps/omw-agent/: .gitignore  package.json  tsconfig.json  vitest.config.ts
apps/omw-agent/scripts/: refresh-pi-mono.sh
apps/omw-agent/src/: cli.ts  global.d.ts  index.ts  keychain.ts  policy-hook.ts  policy.ts  serve.ts  session.ts  warp-session-bash.ts
apps/omw-agent/test/: README.md  _helpers.ts  cli.test.ts  keychain.integration.test.ts  keychain.test.ts  policy-hook.test.ts  policy.test.ts  serve.cancel.test.ts  (+3 more)
apps/web-controller/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
crates/omw-acp/: Cargo.toml
crates/omw-audit/: Cargo.toml
crates/omw-audit/src/: lib.rs
crates/omw-audit/tests/: chain.rs
crates/omw-cli/: Cargo.toml
crates/omw-cli/src/: db.rs  lib.rs  main.rs
crates/omw-cli/src/commands/: agent.rs  agent_runner.rs  ask.rs  config.rs  costs.rs  mod.rs  pair.rs  provider.rs  remote.rs
crates/omw-cli/tests/: README.md  cli_agent.rs  cli_ask.rs  cli_config.rs  cli_costs.rs  cli_provider.rs  pair_list.rs  pair_qr.rs  pair_revoke.rs  remote_start_stop.rs  remote_status.rs
crates/omw-cli/tests/common/: mod.rs
crates/omw-cli/tests/fixtures/: fake-agent.cjs
crates/omw-config/: Cargo.toml
crates/omw-config/assets/: AGENTS.default.md
crates/omw-config/examples/: dump-config.rs
crates/omw-config/src/: error.rs  key_ref.rs  lib.rs  schema.rs  watcher.rs  writer.rs
crates/omw-config/tests/: agents_md.rs  round_trip.rs
crates/omw-keychain/: Cargo.toml
crates/omw-keychain-helper/: Cargo.toml
crates/omw-keychain-helper/src/: lib.rs  main.rs
crates/omw-keychain-helper/tests/: README.md  cli.rs  lib.rs
crates/omw-keychain/src/: backend.rs  error.rs  lib.rs  secret.rs
crates/omw-keychain/tests/: backend_auto.rs  backend_default_unset.rs  backend_os_unavailable.rs  backend_selection.rs  crud.rs  list_omw.rs  proptests.rs  secret_redaction.rs
crates/omw-keychain/tests/common/: mod.rs
crates/omw-policy/: Cargo.toml
crates/omw-policy/src/: lib.rs
crates/omw-pty/: Cargo.toml
crates/omw-pty/src/: command.rs  error.rs  lib.rs
crates/omw-pty/tests/: capture_claude_exit_hint.rs  env.rs  kill_and_wait.rs  lifecycle_drop.rs  resize.rs  spawn_and_read.rs  write_and_echo.rs
crates/omw-remote/: Cargo.toml  build.rs
crates/omw-remote/migrations/: 2026-05-01-init.sql
crates/omw-remote/src/: auth.rs  capability.rs  db.rs  host_key.rs  lib.rs  pairing.rs  replay.rs  request_log.rs  revocations.rs  server.rs  web_assets.rs
crates/omw-remote/src/http/: host_info.rs  mod.rs  pair_redeem.rs  sessions.rs
crates/omw-remote/src/ws/: auth.rs  frame.rs  mod.rs  pty.rs
crates/omw-remote/tests/: capability_token.rs  e2e_full_flow.rs  host_key.rs  http_host_info.rs  http_pair_redeem.rs  http_sessions.rs  http_static.rs  js_client_canonical.rs  js_frame_canonical.rs  pair_redeem.rs  request_log.rs  signed_request.rs  ws_attach_serializes_state.rs  ws_connect_token.rs  ws_frame.rs  ws_handshake.rs  ws_heartbeat.rs  ws_origin_multi.rs  ws_pty_session.rs  ws_scrollback_replay.rs  ws_tui_no_duplicate.rs  ws_via_external_session.rs  ws_via_registry.rs
crates/omw-remote/tests/http_common/: mod.rs
crates/omw-remote/tests/ws_common/: mod.rs
crates/omw-server/: Cargo.toml
crates/omw-server/src/: error.rs  lib.rs  registry.rs
crates/omw-server/src/agent/: bash_broker.rs  mod.rs  process.rs
crates/omw-server/src/handlers/: agent.rs  audit.rs  input.rs  mod.rs  sessions.rs  ws_pty.rs
crates/omw-server/tests/: agent_bash.rs  agent_session.rs  audit_endpoint.rs  external_session.rs  http_input.rs  http_register.rs  inline_prompt_real_kernel.rs  inline_prompt_repro.rs  loopback_no_proxy.rs  parser_attach.rs  registry_lifecycle.rs  vt100_mode_2026.rs  ws_concurrent.rs  ws_pty_roundtrip.rs
crates/omw-server/tests/fixtures/: mock-omw-agent.mjs
docs/: agpl-compliance-audit-2026-05-01.md  inline-agent-command-execution-report.md  merge-plan-byorc-vs-origin-main-2026-05-02.md  mobile-remote-control-qa.md  mobile-web-controller-phone-qa.md  simplify-followups-2026-05-09.md  tech-debt-audit-2026-05-09.findings.json  tech-debt-audit-2026-05-09.md  tech-debt-audit-2026-05-11.findings.json  tech-debt-audit-2026-05-11.md  v0.4-thin-functional-gaps.md  v0.4-thin-multi-session-design.md  v0.4-thin-polish-continuation-2026-05-02.md
docs/archive/: inline-agent-stack-progress-2026-05-06.md  omw-remote-implementation.md  v0.4-thin-polish-continuation-2026-05-01.md  v0.4-thin-polish-continuation-2026-05-02.md  v0.4-thin-tmux-style-attach-plan.md
scripts/: build-linux-gui.sh  build-mac-dmg.sh  build-windows-zip.ps1  install-tech-debt-daemon.sh  tech-debt-audit-runner.sh  uninstall-tech-debt-daemon.sh
scripts/qa/: mobile-ios-controller-auto.mjs  mobile-remote-control-manual-host.mjs  mobile-web-controller-auto.mjs  mobile-web-controller-host.mjs
scripts/release/: Info.plist.template
specs/: byorc-protocol.md  cloud-strip-plan.md  fork-strategy.md  test-plan.md  threat-model.md
(+51 files in other folders)
