[workspace]
resolver = "2"
members = [
    "crates/omw-acp",
    "crates/omw-audit",
    "crates/omw-cli",
    "crates/omw-config",
    "crates/omw-keychain",
    "crates/omw-policy",
    "crates/omw-pty",
    "crates/omw-remote",
    "crates/omw-server",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/oh-my-warp/oh-my-warp"
publish = false
