[workspace]
resolver = "2"
members = [
    "crates/omw-acp",
    "crates/omw-audit",
    "crates/omw-cli",
    "crates/omw-config",
    "crates/omw-keychain",
    "crates/omw-keychain-helper",
    "crates/omw-policy",
    "crates/omw-pty",
    "crates/omw-remote",
    "crates/omw-server",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/oh-my-warp/oh-my-warp"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
url = { version = "2", features = ["serde"] }
notify = "6"
tokio = { version = "1", default-features = false, features = ["sync"] }
tempfile = "3"
proptest = "1"
static_assertions = "1"
keyring = { version = "3", default-features = false }
security-framework = "3"
zeroize = { version = "1", features = ["zeroize_derive"] }
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
toml_edit = "0.22"
anyhow = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
vt100 = "0.16"
