[package]
name = "omw-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "omw umbrella CLI: provider/config management for v0.1."

[lib]
path = "src/lib.rs"

[[bin]]
name = "omw"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
toml_edit.workspace = true
anyhow.workspace = true
omw-config = { path = "../omw-config" }
omw-keychain = { path = "../omw-keychain" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json = "1"
rusqlite.workspace = true
chrono.workspace = true
omw-config = { path = "../omw-config" }
omw-keychain = { path = "../omw-keychain" }
