[package]
name = "omw-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "omw umbrella CLI: provider/config management for v0.1."

[lib]
path = "src/lib.rs"

[[bin]]
name = "omw"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
toml_edit.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json = "1"
qrcode = { version = "0.14", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
omw-config = { path = "../omw-config" }
omw-keychain = { path = "../omw-keychain" }
omw-remote = { path = "../omw-remote" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json = "1"
rusqlite.workspace = true
chrono.workspace = true
omw-config = { path = "../omw-config" }
omw-keychain = { path = "../omw-keychain" }
omw-remote = { path = "../omw-remote" }
