[package]
name = "omw-config"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "TOML config loader, schema validator, and file watcher for omw."

[dependencies]
serde.workspace = true
toml.workspace = true
toml_edit = "0.22"
thiserror.workspace = true
url.workspace = true
notify.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json = "1"
