[package]
name = "omw-keychain"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "OS keychain wrapper for omw."

[dependencies]
omw-config = { path = "../omw-config" }
zeroize = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }
security-framework = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-sync-persistent", "crypto-rust"] }

[dev-dependencies]
omw-config = { path = "../omw-config" }
proptest.workspace = true
static_assertions.workspace = true
