[package]
name = "omw-policy"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Approval mode + allowlist policy. Wired into pi-agent's beforeToolCall hook via omw-server's policy/classify JSON-RPC."

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
