[package]
name = "omw-remote"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "GUI-anchored PTY bridge + remote API + pairing daemon. Phase 0 placeholder."

[dependencies]
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
base64 = "0.22"
base32 = "0.4"
serde = { workspace = true }
serde_json = "1"
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
