[package]
name = "omw-remote"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "GUI-anchored PTY bridge + remote API + pairing daemon. Phase 0 placeholder."
build = "build.rs"

[features]
default = ["embedded-web-controller"]
# Embeds `apps/web-controller/dist/` into the binary via `include_dir!` and
# wires a static-asset fallback into the router. Build script (`build.rs`)
# runs `npm install` + `npm run build` to populate dist/. Disable with
# `--no-default-features` on hosts without Node.
embedded-web-controller = ["dep:include_dir", "dep:mime_guess"]

[dependencies]
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
base64 = "0.22"
base32 = "0.4"
serde = { workspace = true }
serde_json = "1"
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
# axum 0.7 + tokio-tungstenite 0.24 to match omw-server (avoid duplicate-version
# bloat in the workspace lockfile; brief proposed 0.8/0.21 — deviation noted).
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
omw-pty = { path = "../omw-pty" }
omw-server = { path = "../omw-server" }
bytes = "1"
futures-util = "0.3"
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "io-util", "test-util"] }
tokio-tungstenite = "0.24"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
vt100 = { workspace = true }
