[package]
name = "omw-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Local backend shim for the forked client; sole audit writer."

[dependencies]
omw-pty = { path = "../omw-pty" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "net",
    "time",
] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"], optional = true }
serde = { workspace = true }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { workspace = true }
bytes = "1"
base64 = "0.22"
thiserror = { workspace = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "net",
    "time",
    "test-util",
] }
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
futures-util = "0.3"
base64 = "0.22"
serde_json = "1"
